--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -3,7 +3,7 @@
         "app_function": "index.app",
         "aws_region": "us-east-2",
         "profile_name": null,
-        "project_name": "workoutgenerato",
+        "project_name": "workoutgenerator",
         "runtime": "python3.6",
         "s3_bucket": "zappa-gq2z2bk0u",
         "domain": "themcilroy.com",
