--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -5,7 +5,7 @@
         "profile_name": null,
         "project_name": "workoutgenerator",
         "runtime": "python3.6",
-        "s3_bucket": "zappa-gq2z2bk0u",
+        "s3_bucket": "zappa-pypower",
         "domain": "pypower.themcilroy.com",
         "route53_enabled": true,
         "certificate_arn": "arn:aws:acm:us-east-1:824269988929:certificate/fdc01f6c-be49-40b3-afb7-707d085d1042"
